...
  Widget build(BuildContext context) {
    return Scaffold(
      extendBody: true,
      body: const RouterOutlet(),
      floatingActionButtonLocation: FloatingActionButtonLocation.centerDocked,
      floatingActionButton: FloatingActionButton(
        tooltip: 'floatActionButton',
        onPressed: () {
          Pulsar.to.pushNamed('/discover_movie', forRoot: true);
        },
        child: Icon(
          Icons.location_searching,
          color: ColorPalettes.white,
...
